--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.19",
+    "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
     "lucide-react": "^0.488.0",
     "papaparse": "^5.5.2",
