--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
     "lucide-react": "^0.488.0",
+    "ogl": "^1.0.11",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
