--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "infoBaines",
-  "homepage": "https://saydopsV2.github.io/infoBaines/",
+  "name": "infoRisquesBaignade",
+  "homepage": "https://saydopsV2.github.io/infoRisquesBaignade/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
